@@ -1,5 +1,5 @@
 '\" t
-.\" Sccsid @(#)find.1	1.41 (gritter) 2/7/05
+.\" Sccsid @(#)find.1	1.42 (gritter) 2/24/05
 .\" Parts taken from find(1), Unix 7th edition:
 .\" Copyright(C) Caldera International Inc. 2001-2002. All rights reserved.
 .\"
@@ -33,7 +33,7 @@
 .\" OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE,
 .\" EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.TH FIND 1 "2/7/05" "Heirloom Toolchest" "User Commands"
+.TH FIND 1 "2/24/05" "Heirloom Toolchest" "User Commands"
 .SH NAME
 find \- find files
 .SH SYNOPSIS
@@ -113,6 +113,7 @@ lfB l.
 b	block special file;
 c	character special file;
 d	directory;
+D	Solaris door;
 f	plain file;
 l	symbolic link;
 p	named pipe;
