@@ -45,11 +45,11 @@
 #define	USED
 #endif
 #if defined (SU3)
-static const char sccsid[] USED = "@(#)find_su3.sl	1.39 (gritter) 2/15/05";
+static const char sccsid[] USED = "@(#)find_su3.sl	1.40 (gritter) 2/24/05";
 #elif defined (SUS)
-static const char sccsid[] USED = "@(#)find_sus.sl	1.39 (gritter) 2/15/05";
+static const char sccsid[] USED = "@(#)find_sus.sl	1.40 (gritter) 2/24/05";
 #else
-static const char sccsid[] USED = "@(#)find.sl	1.39 (gritter) 2/15/05";
+static const char sccsid[] USED = "@(#)find.sl	1.40 (gritter) 2/24/05";
 #endif
 
 #include <stdio.h>
@@ -93,6 +93,10 @@ static const char sccsid[] USED = "@(#)find.sl	1.39 (gritter) 2/15/05";
 #ifndef	MNTTYPE_IGNORE
 #define	MNTTYPE_IGNORE	""
 #endif
+
+#ifndef	S_IFDOOR
+#define	S_IFDOOR	0xD000
+#endif	/* !S_IFDOOR */
 
 #undef	ctime
 #define	ctime	find_ctime
@@ -446,6 +450,7 @@ static struct anode *e3(void) { /* parse parens and predicates */
 		i = i=='d' ? S_IFDIR :
 		    i=='b' ? S_IFBLK :
 		    i=='c' ? S_IFCHR :
+		    i=='D' ? S_IFDOOR :
 		    i=='f' ? S_IFREG :
 		    i=='l' ? S_IFLNK :
 		    i=='p' ? S_IFIFO :
